--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ text-align:center;
 <select>
 <option>Male</option>
 <option>Female</option>
-<option>Other</option>
+<option>Others</option>
+<option>other</option>
 </select>
 <label for="event">Choose Event</label>
 <select id="event"name="event">
